# autoeq2camilladsp

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: build.yml  release.yml
src/: configcreation.rs  crossfeed_mixer.yml  devices.yml  interactive.rs  main.rs  noninteractive.rs  scraping.rs  userinterface.rs
src/data/: config.yml  crossfeed_mixers.yml  default_devices.yml  header.yml  mmp.yml  natural.yml  pow_chu_moy.yml
