[package]
name = "autoeq2camilladsp"
version = "0.5.3"
authors = ["Micha Ebert-Hanke <michael@ebert-hanke.de>"]
description = "a simple tool to generate a CamillaDSP config based on correction data from the AutoEq repository"
readme = "README.md"
repository = "https://github.com/Ebert-Hanke/autoeq2camilladsp/"
license = "MIT"
edition = "2021"

[[bin]]
name = "autoeq2camilladsp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
console = "0.15"
clap = { version = "4.3", features = ["derive"] } 
dialoguer = { version = "0.10", features = ["fuzzy-select"]}
indicatif = "0.17"
reqwest = "0.11"
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
